--- a/main.css
+++ b/main.css
@@ -6,7 +6,7 @@
 
 body{
     font-family: 'montserrat', sans-serif;
-    background-image: url(bg.jpg);
+    background-image: url(hotbg.jpg);
     background-size: cover;
     background-position: top center;
 }
